[package]
name = "rust_ui"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"

[dependencies]
winit = "0.28"
wgpu = "0.16"
raw-window-handle = "0.5"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
metal = "0.24"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"
