[workspace]
members = [".", "examples"]

[package]
name = "Rust_UI"
version = "0.1.0"
edition = "2021"
authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
description = "A modern, cross-platform UI framework for building native applications"
documentation = "https://docs.rs/rust_ui"
repository = "https://github.com/algoscienceacademy/RustUI"
license = "MIT"
readme = "README.md"
keywords = ["ui", "gui", "cross-platform", "framework", "native"]
categories = ["gui", "api-bindings", "graphics", "rendering", "wasm"]

exclude = ["docs/private/*", "scripts/*"]
include = [
    "src/**/*",
    "examples/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
winit = "0.28"
wgpu = "0.16"
raw-window-handle = "0.5"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
metal = "0.24"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["wasm32-unknown-unknown", "x86_64-apple-darwin"]

[package.metadata.algoscienceacademy]
project-type = "framework"
organization = "Algo Science Academy"
team = "UI Framework Team"
lead-developer = "Shahrear Hossain"
contact = "sshahrearhossain@gmail.com"
