[workspace]
members = [".", "examples"]

[package]
name = "rust-native"
version = "1.3.0"
edition = "2021"
authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
description = "A modern, cross-platform UI framework for building native applications"
documentation = "https://docs.rs/rust_native"
repository = "https://github.com/algoscienceacademy/RustUI"
license = "MIT"
readme = "README.md"
keywords = ["ui", "gui", "cross-platform", "framework", "native"]
categories = ["gui", "api-bindings", "graphics", "rendering", "wasm"]

exclude = ["docs/private/*", "scripts/*"]
include = [
    "src/**/*",
    "examples/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[lib]
name = "rust_native"
path = "src/lib.rs"

[dependencies]
winit = "0.28"
wgpu = "0.16"
raw-window-handle = "0.5"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "5.0"
crossterm = "0.25"
clap = { version = "4.0", features = ["derive"] }
toml = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
metal = { version = "0.24", features = ["default"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["wasm32-unknown-unknown", "x86_64-apple-darwin"]

[package.metadata.algoscienceacademy]
project-type = "framework"
organization = "Algo Science Academy"
team = "UI Framework Team"
lead-developer = "Shahrear Hossain"
contact = "sshahrearhossain@gmail.com"

[[bin]]
name = "rust-native"
path = "src/bin/rust-native.rs"
