[package]
name = "rust_native_examples"
version = "0.1.4"
edition = "2021"
publish = false

[[example]]
name = "todo_app"
path = "todo_app.rs"

[dependencies]
rust_native = { path = ".." }
winit = "0.28"
wgpu = "0.16"
tokio = { version = "1.28", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
